# genai-english-learning

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yml  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: deps.py  schemas.py
backend/src/api/routers/: exercises.py  health.py  progress.py  vocab.py
backend/src/api/schemas/: vocab.py
backend/src/core/: config.py
backend/src/db/: engine.py  init_db.py  models.py
backend/src/db/repositories/: vocab.py
backend/src/llm/: client.py  prompts.py
backend/src/schemas/: quiz.py
backend/src/services/: progress.py  quiz.py
backend/src/utils/: normalize.py
components/: ProgressMiniCard.tsx  QuizCard.tsx  UserLabelBar.tsx  VocabAddForm.tsx  VocabList.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  sonner.tsx
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/components/: ProgressMiniCard.tsx  QuizCard.tsx  UserLabelBar.tsx  VocabAddForm.tsx  VocabList.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/lib/: api.ts
lib/: api.ts
